<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_interest"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:background="@drawable/input_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/search"
            android:src="@drawable/main_map_icon_search_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/find_interest_poi"
            android:textColor="#B7B7B7"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/near" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#20000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_bus_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/busstop"
                android:gravity="center"
                android:text="@string/bus_stop"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/tv_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/hotel"
                android:gravity="center"
                android:text="@string/hotel"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/tv_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/food"
                android:gravity="center"
                android:text="@string/food"
                android:textSize="12sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/sports"
                android:gravity="center"
                android:text="@string/sport"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/tv_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/shop"
                android:gravity="center"
                android:text="@string/shop"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/tv_ktv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ktv"
                android:gravity="center"
                android:text="@string/ktv"
                android:textSize="12sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>